# hesa-llm

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CRON_REPORT_Apr7.md  README.md  build.sh  build_clang.sh  test_inference.sh
docs/: architecture-research.md  architecture.md  quantization-research.md
include/hesa/: backend.hpp  engine.hpp  gguf.hpp  hesa.h  kv_cache.hpp  model.hpp  result.hpp  rope.hpp  sampling.hpp  simd.hpp  tensor.hpp  tensor.hpp.bak  tokenizer.hpp  version.hpp
src/: engine.cpp  gguf_parser.cpp  hesa_core.cpp  main.cpp  transformer_block.cpp  transformer_block.hpp
src/backend/: backend.cpp  cpu_backend.cpp  cpu_backend.hpp  metal_backend.mm  simd.cpp  simd.cpp.bak
src/layers/: rope.cpp
src/memory/: kv_cache.cpp
src/model/: gguf_loader.cpp  gguf_loader.hpp
src/sampling/: sampler.cpp
src/server/: chat_handler.cpp  main.cpp  server.cpp  server.hpp
src/tensor/: tensor.cpp  tensor_ops.cpp
src/tokenizer/: tokenizer.cpp
tests/: CMakeLists.txt  test_backend.cpp  test_kv_cache.cpp  test_main.cpp  test_rope.cpp  test_sampling.cpp  test_sampling_full.cpp  test_sp_tokenizer.cpp  test_tensor.cpp
